--- a/projects/01-Twitter-card/src/App.css
+++ b/projects/01-Twitter-card/src/App.css
@@ -40,6 +40,7 @@
 }
 
 .tw-followCard-button{
+    font-family: Poppins, system-ui;
     margin-left: 16px;
     border: 0;
     border-radius: 999px;
