--- a/projects/01-Twitter-card/src/index.css
+++ b/projects/01-Twitter-card/src/index.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     background: #222;
-    font-family: system-ui ;
+    font-family: Poppins, system-ui ;
     display: grid;
     place-content: center;
     min-height: 100vh;
